@@ -1,3 +1,5 @@
+* Automatically set bank from iban on bank account for french iban
+
 Version 1.6 - 2015-12-23
 
 Version 1.4 - 2015-05-29
